force-app/main/default/objects/TipoRecursoProduto__c/TipoRecursoProduto__c.object-meta.xml
<CustomObject>
    <label>Tipo Recurso do Produto</label>
    <nameField>
        <displayFormat>RP-{0000}</displayFormat>
        <label>Recurso</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tipos de Recurso do Produto</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>