force-app/main/default/objects/TipoRecursoProduto__c/fields/ChaveInternaDuplicidade__c.field-meta.xml
<CustomField>
    <fullName>ChaveInternaDuplicidade__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Chave Interna para Duplicidade</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>