force-app/main/default/objects/TipoRecursoProduto__c/fields/IdentificadorBase__c.field-meta.xml
<CustomField>
    <fullName>IdentificadorBase__c</fullName>
    <formula>Produto__r.EstruturaProduto__r.CodigoInterno__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Identificador Base</label>
    <type>Text</type>
</CustomField>