force-app/main/default/objects/TipoRecursoProduto__c/fields/IdentificadorChave__c.field-meta.xml
<CustomField>
    <fullName>IdentificadorChave__c</fullName>
    <formula>TipoRecurso__r.Sequencial__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Identificador Chave</label>
    <type>Text</type>
</CustomField>