force-app/main/default/objects/TipoRecursoProduto__c/fields/NomeRecurso__c.field-meta.xml
<CustomField>
    <fullName>NomeRecurso__c</fullName>
    <formula>TipoRecurso__r.DescricaoRecurso__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descrição Recurso</label>
    <type>Text</type>
</CustomField>