force-app/main/default/objects/TipoRecursoProduto__c/fields/NomeRecursoProduto__c.field-meta.xml
<CustomField>
    <fullName>NomeRecursoProduto__c</fullName>
    <formula>TipoRecurso__r.RecursoProduto__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recurso Configuração</label>
    <type>Text</type>
</CustomField>