force-app/main/default/objects/TipoRecursoProduto__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Tipos de Recursos do  Produto</relationshipLabel>
    <relationshipName>TiposRecursosProduto</relationshipName>
    <type>Lookup</type>
</CustomField>