force-app/main/default/objects/TipoRecursoProduto__c/fields/Sequencial__c.field-meta.xml
<CustomField>
    <fullName>Sequencial__c</fullName>
    <formula>TipoRecurso__r.RecursoProduto__r.Sequencial__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sequencial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>