force-app/main/default/objects/TipoRecursoProduto__c/fields/TipoRecurso__c.field-meta.xml
<CustomField>
    <fullName>TipoRecurso__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tipo de Recursos do Produto</label>
    <referenceTo>TiposRecurso__c</referenceTo>
    <relationshipLabel>Produtos</relationshipLabel>
    <relationshipName>Produtos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>